# weather_cli

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
weather_cli/: access_api_key.py  cli.py  omeo_weather_api.py  open_weather_api.py
