[tool.poetry]
name = "weather-cli"
version = "0.1.0"
description = "A python CLI application to check your weather condition"
authors = ["Pymode-Dev <pymode000@gmail.com>"]
readme = "README.md"
packages = [{include = "weather_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
mypy = "^1.0.1"
rich = "^13.3.2"
pre-commit = "^3.1.1"
black = "^23.1.0"
flake8 = "^6.0.0"
pytest = "^7.2.2"
types-requests = "^2.28.11.17"

[tool.poetry.dev-dependencies]
black = "*"
pre-commit = "*"
flake8 = "*"
mypy = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
weather = "weather_cli.cli:main"
